<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/setting"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/rate_us"
        android:orderInCategory="100"
        android:title="@string/rate_us_actionbarMenu"
        app:showAsAction="never"/>

    <item
        android:id="@+id/log_out"
        android:orderInCategory="100"
        android:title="@string/logout_actionbarMenu"
        app:showAsAction="never"/>

    <item android:id="@+id/action_autostart"
          android:title="@string/permission_actionbarMenu"
          app:actionViewClass="android.widget.ImageButton"
          android:icon="@drawable/ic_warning_black_24dp"
          android:orderInCategory="100"
          app:showAsAction="ifRoom" />

</menu>
