<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:cardCornerRadius="27dp"
        card_view:cardElevation="27dp"
        card_view:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/message_wishlist"
                    android:textColor="#000000"
                    android:drawableLeft="@drawable/ic_message_black_24dp"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/show_msg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Message"
                    android:textColor="#000000"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_wishlist"
                    android:drawableLeft="@drawable/date_24dp"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/show_msg_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Date"
                    android:textColor="#000000"
                    android:textSize="14sp"/>

                <View
                    android:layout_width="2dp"
                    android:layout_height="27dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:background="@color/colorPrimary"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_wishlist"
                    android:drawableLeft="@drawable/time_24dp"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/hr12Time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12hrTime"
                    android:textColor="#000000"
                    android:textSize="14sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to_wishlist"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/show_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="To"
                    android:textColor="#000000"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_no_wishlist"
                    android:drawableLeft="@drawable/ic_phone_black_24dp"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/show_phone_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Number"
                    android:textColor="#000000"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/idno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="id"
                    android:layout_marginLeft="12dp"
                    android:visibility="gone"
                    android:textColor="#000000"
                    android:textSize="14sp"/>


                <TextView
                    android:id="@+id/show_msg_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Time"
                    android:textColor="#000000"
                    android:visibility="gone"
                    android:textSize="14sp"/>
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>